--- a/web3-live-demo/package.json
+++ b/web3-live-demo/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@esotericsoftware/spine-canvas": "^4.2.14",
+    "@esotericsoftware/spine-player": "^4.2.14",
+    "@esotericsoftware/spine-ts": "^4.2.13",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@mui/styled-engine-sc": "^5.12.0",
@@ -13,7 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.1",
-    "@types/node": "^20.1.0",
+    "@types/node": "^20.1.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@usedapp/core": "^1.2.9",
